dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  selector: 
      app: kubernetes-dashboard-web 
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
